tests/basic.test
[case zeros]
import numpy as np
a = np.zeros(1)
b = np.zeros((1,2))

reveal_type(a)
reveal_type(b)
[out]
main:5: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.OneD]'
main:6: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.TwoD]'


[case zeros_1]
import numpy as np
a = np.zeros([1,2])
b = np.zeros([1 for _ in range(2+2)])
reveal_type(a)
reveal_type(b)
[out]
main:4: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.TwoD]'
main:5: error: Revealed type is 'numpy.ndarray[builtins.float, Any]'


[case zeros_2]
import numpy as np
a = np.zeros(1, dtype=int)
b = np.zeros(1, dtype='int')
c = np.zeros(1, dtype='i')
reveal_type(a)
reveal_type(b)
reveal_type(c)
[out]
main:5: error: Revealed type is 'numpy.ndarray[builtins.int, numpy.OneD]'
main:6: error: Revealed type is 'numpy.ndarray[builtins.int, numpy.OneD]'
main:7: error: Revealed type is 'numpy.ndarray[builtins.int, numpy.OneD]'


[case indexing_0]
import numpy as np
a = np.zeros(10, dtype='int')
b = np.zeros((10, 10))

reveal_type(b[0])
reveal_type(b[0,0])
reveal_type(b[a])
reveal_type(b[:, :])
reveal_type(b[...])
reveal_type(b[0:10])
reveal_type(b[..., 0])
reveal_type(b[..., 0,0])
reveal_type(b[:, 1])
reveal_type(b[[0,1]])
reveal_type(np.zeros((3,10,10))[np.ones(3, dtype=bool)])
reveal_type(np.zeros((3,3,3))[np.ones((3,3,3), dtype=bool)])
[out]
main:5: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.OneD]'
main:6: error: Revealed type is 'builtins.float*'
main:7: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.TwoD]'
main:8: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.TwoD]'
main:9: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.TwoD]'
main:10: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.TwoD]'
main:11: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.OneD]'
main:12: error: Revealed type is 'builtins.float*'
main:13: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.OneD]'
main:14: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.TwoD]'
main:15: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.ThreeD]'
main:16: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.OneD]'

[case indexing_1]
import numpy as np
i1 = np.zeros(10, dtype='int')
a = np.zeros((3, 3, 3))
reveal_type(a[1,1,1])  # 4
reveal_type(a[(0,1,2),]) # 5
reveal_type(a[1,1,i1]) # 6
reveal_type(a[1,i1,i1]) # 7
reveal_type(a[i1,i1,i1]) # 8
reveal_type(a[...]) # 9
reveal_type(a[tuple([1,1,1])]) # 10
[out]
main:4: error: Revealed type is 'builtins.float*'
main:5: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.ThreeD]'
main:6: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.OneD]'
main:7: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.OneD]'
main:8: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.OneD]'
main:9: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.ThreeD]'
main:10: error: Revealed type is 'numpy.ndarray[builtins.float*, Any]'


[case indexing_2]
import numpy as np
b = np.zeros((10, 10))
reveal_type(b[None])
reveal_type(b[np.newaxis])
[out]
main:3: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.ThreeD]'
main:4: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.ThreeD]'

[case indexing_3]
import numpy as np
b = np.zeros((10, 10))
reveal_type(b[np.zeros(10, dtype='int')])
[out]
main:3: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.TwoD]'

[case empty_like]
import numpy as np
a = np.zeros(10)
b = np.empty_like(a)
c = np.empty_like(a, dtype=bool)
d = np.arange(10, dtype=np.int64)
reveal_type(b)
reveal_type(c)
reveal_type(d)
[out]
main:6: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.OneD]'
main:7: error: Revealed type is 'numpy.ndarray[builtins.bool, numpy.OneD]'
main:8: error: Revealed type is 'numpy.ndarray[builtins.int, numpy.OneD]'


[case array_constructor]
import numpy as np
import itertools
N = 10
l = [(i, i) for i in range(N)]
pairs = np.array(l)
reveal_type(l)
reveal_type(pairs)
[out]
main:6: error: Revealed type is 'builtins.list[Tuple[builtins.int*, builtins.int*]]'
main:7: error: Revealed type is 'numpy.ndarray[builtins.int, numpy.TwoD]'

[case array_constructor_1]
import numpy as np
reveal_type(np.asarray(np.zeros((3,3))))
[out]
main:2: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.TwoD]'




[case reshape]
import numpy as np
a = np.zeros((2,2,2))
reveal_type(np.reshape(a, order='C', newshape=(1,1)))
reveal_type(np.reshape(a, 1))
reveal_type(np.reshape(a, -1))
reveal_type(a.reshape(order='C', shape=(1,1)))
reveal_type(a.reshape(1))
reveal_type(a.reshape(-1))
reveal_type(a.reshape((1,1)))
[out]
main:3: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.TwoD]'
main:4: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.OneD]'
main:5: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.OneD]'
main:6: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.TwoD]'
main:7: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.OneD]'
main:8: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.OneD]'
main:9: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.TwoD]'

[case vstack]
import numpy as np
a = np.zeros(10)
b = np.zeros((10, 10))
reveal_type(np.vstack((a, a)))
reveal_type(np.vstack((b, b)))
np.vstack((a, b))
[out]
main:4: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.TwoD]'
main:5: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.ThreeD]'
main:6: error: Cannot infer type argument 2 of "vstack"


[case astype]
import numpy as np
a = np.zeros(10)
b = a.astype('bool')
reveal_type(b)
[out]
main:4: error: Revealed type is 'numpy.ndarray[builtins.bool, numpy.OneD]'


[case all]
import numpy as np
reveal_type(np.all(np.zeros(10)))
reveal_type(np.all(np.zeros((10,10))))
reveal_type(np.all(np.zeros((10,10)), axis=1))
reveal_type(np.all(np.zeros((10,10)), axis=(0,1)))
reveal_type(np.all(np.zeros((10,10)), axis=(0,1), keepdims=True))

from typing import Any
f = 0  # type: Any
reveal_type(np.all(np.zeros((10,10)), axis=(0,1), keepdims=f))
reveal_type(np.all(np.zeros((10,10)), axis=(0,1), keepdims=False))
[out]
main:2: error: Revealed type is 'builtins.bool'
main:3: error: Revealed type is 'builtins.bool'
main:4: error: Revealed type is 'numpy.ndarray[builtins.bool, numpy.OneD]'
main:5: error: Revealed type is 'builtins.bool'
main:6: error: Revealed type is 'numpy.ndarray[builtins.bool, numpy.TwoD]'
main:10: error: Revealed type is 'numpy.ndarray[builtins.bool, Any]'
main:11: error: Revealed type is 'builtins.bool'


[case choose]
import numpy as np
reveal_type(np.choose(np.zeros(10, dtype='int'), (np.ones(10), np.zeros(10))))
[out]
main:2: error: Revealed type is 'numpy.ndarray[Any, numpy.OneD*]'


[case cumsum]
import numpy as np
reveal_type(np.cumsum(np.zeros((10,10)),axis=1))
reveal_type(np.cumsum(np.zeros((10,10))))
reveal_type(np.cumsum(np.zeros((10,10)),axis=None))
[out]
main:2: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.TwoD*]'
main:3: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.OneD]'
main:4: error: Revealed type is 'numpy.ndarray[builtins.float*, numpy.OneD]'


[case diagonal]
import numpy as np
reveal_type(np.diagonal(np.zeros((10,10))))
reveal_type(np.diagonal(np.zeros((10,10,10))))
[out]
main:2: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.OneD]'
main:3: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.TwoD]'

[case diag]
import numpy as np
reveal_type(np.diag(np.zeros((10,10))))
reveal_type(np.diag(np.zeros(10)))
[out]
main:2: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.OneD]'
main:3: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.TwoD]'


[case add]
import numpy as np
a = np.zeros((1,1))
b = np.zeros((1,1))
reveal_type(np.add(a, b))
reveal_type(np.add(a, float(1.0)))
reveal_type(np.add(a, int(1)))
reveal_type(np.add(1, 1))
reveal_type(np.add(1, 1.0))
reveal_type(np.absolute(1.0))
reveal_type(np.absolute(a))
[out]
main:4: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.TwoD]'
main:5: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.TwoD]'
main:6: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.TwoD]'
main:7: error: Revealed type is 'builtins.int'
main:8: error: Revealed type is 'builtins.float'
main:9: error: Revealed type is 'builtins.float'
main:10: error: Revealed type is 'numpy.ndarray[builtins.float, numpy.TwoD]'

[case frexp]
import numpy as np
reveal_type(np.frexp(1.0))
[out]
main:2: error: Revealed type is 'Tuple[builtins.float, builtins.int]'
